add tag content type and strapti update

--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "posts",
   "info": {
-    "name": "post"
+    "name": "post",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -31,6 +32,9 @@
         "other"
       ],
       "required": true
+    },
+    "tags": {
+      "collection": "tag"
     }
   }
 }
