--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-site-strapi",
   "private": true,
   "version": "0.1.0",
-  "description": "Strapi backend for my personal site",
+  "description": "A Strapi application",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -11,25 +11,19 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.4.1",
-    "strapi-admin": "3.4.1",
-    "strapi-connector-mongoose": "3.4.1",
-    "strapi-plugin-content-manager": "3.4.1",
-    "strapi-plugin-content-type-builder": "3.4.1",
-    "strapi-plugin-email": "3.4.1",
-    "strapi-plugin-upload": "3.4.1",
-    "strapi-plugin-users-permissions": "3.4.1",
-    "strapi-provider-upload-aws-s3": "^3.4.1",
-    "strapi-utils": "3.4.1"
+    "@strapi/strapi": "4.4.5",
+    "@strapi/plugin-users-permissions": "4.4.5",
+    "@strapi/plugin-i18n": "4.4.5",
+    "pg": "8.6.0"
   },
   "author": {
-    "name": "Dimitris Trechas"
+    "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "f45183e7-3e58-448d-ad4f-aa4f52c8c1af"
+    "uuid": "53d3879d-1afd-4345-9751-890d664ffcd1"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
+    "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
