--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-JWT_SECRET=tobemodified
+
+# @strapi-community/dockerize variables 
+
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=personal_site_strapi
+DATABASE_USERNAME=dtrechas
+DATABASE_PASSWORD=
+NODE_ENV=development
+DATABASE_CLIENT=postgres
+APP_KEYS="asdwqeqweq,asdasdasdas"
+API_TOKEN_SALT="asdas123123sdsa"
+ADMIN_JWT_SECRET="asdwqesdasd"
+JWT_SECRET="asdaswqeqwcvcxv"
