--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DATABASE_USERNAME=dtrechas
 DATABASE_PASSWORD=
 NODE_ENV=development
 DATABASE_CLIENT=postgres
-APP_KEYS="asdwqeqweq,asdasdasdas"
-API_TOKEN_SALT="asdas123123sdsa"
-ADMIN_JWT_SECRET="asdwqesdasd"
-JWT_SECRET="asdaswqeqwcvcxv"
+APP_KEYS="asdwqeqwe123q,asdasdasdas"
+API_TOKEN_SALT="asdassad123123sdsa"
+ADMIN_JWT_SECRET="asdwqegfsdasd"
+JWT_SECRET="asdaswqeqwaswcvcxv"
