--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   personal-site-strapi:
     container_name: personal-site-strapi
@@ -20,16 +20,17 @@ services:
       - ./config:/opt/app/config
       - ./src:/opt/app/src
       - ./package.json:/opt/package.json
-      - ./yarn.lock:/opt/yarn.lock
+      - ./package-lock.json:/opt/package-lock.json
+
       - ./.env:/opt/app/.env
       - ./public/uploads:/opt/app/public/uploads
     ports:
-      - '1337:1337'
+      - "1337:1337"
     networks:
       - personal-site-strapi
     depends_on:
       - personal-site-strapiDB
-      
+
   personal-site-strapiDB:
     container_name: personal-site-strapiDB
     platform: linux/amd64 #for platform error on Apple M1 chips
@@ -45,14 +46,27 @@ services:
       #- ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
 
     ports:
-      - '5432:5432'
+      - "5432:5432"
     networks:
       - personal-site-strapi
+
+  personal-site-strapiAdminer:
+    container_name: personal-site-strapiAdminer
+    image: adminer
+    restart: unless-stopped
+    ports:
+      - "9090:8080"
+    environment:
+      - ADMINER_DEFAULT_SERVER=personal-site-strapiDB
+    networks:
+      - personal-site-strapi
+    depends_on:
+      - personal-site-strapiDB
 
 volumes:
   personal-site-strapi-data:
 
 networks:
   personal-site-strapi:
-    name: Personal-site-strapi
+    name: personal-site-strapi
     driver: bridge
