--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "version": "1.0.0",
   "description": "Strapi backend for my personal site",
   "scripts": {
-    "dev": "docker-compose up",
-    "develop": "docker-compose up",
+    "build:docker": "docker-compose up",
+    "develop": "strapi develop",
+    "dev": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.5.0",
-    "@strapi/plugin-users-permissions": "4.5.0",
-    "@strapi/strapi": "4.5.0",
+    "@strapi/plugin-i18n": "4.14.5",
+    "@strapi/plugin-users-permissions": "4.14.5",
+    "@strapi/strapi": "4.14.5",
     "pg": "^8.8.0"
   },
-  "author": "Dimitris Trechas <dimitristrechas@gmail.com> (https://www.dimitristrechas.com)",
+  "author": {
+    "name": "Dimitris Trechas <dimitristrechas@gmail.com> (https://www.dimitristrechas.com)"
+  },
   "strapi": {
-    "uuid": "53d3879d-1afd-4345-9751-890d664ffcd1"
+    "uuid": "e6ac179b-3fda-4b85-95d2-d0b6a1c28e38"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
