--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
   "name": "personal-site-strapi",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "description": "Strapi backend for my personal site",
-  "scripts": {
-    "build:docker": "docker-compose up",
-    "develop": "strapi develop",
-    "dev": "strapi develop",
-    "start": "strapi start",
-    "build": "strapi build",
-    "strapi": "strapi"
-  },
-  "dependencies": {
-    "@strapi/plugin-i18n": "4.15.0",
-    "@strapi/plugin-users-permissions": "4.15.0",
-    "@strapi/strapi": "4.15.0",
-    "mysql": "^2.18.1",
-    "pg": "^8.8.0"
-  },
+  "license": "MIT",
   "author": {
     "name": "Dimitris Trechas <dimitristrechas@gmail.com> (https://www.dimitristrechas.com)"
   },
-  "strapi": {
-    "uuid": "e6ac179b-3fda-4b85-95d2-d0b6a1c28e38"
+  "scripts": {
+    "build": "strapi build",
+    "build:docker": "docker-compose up",
+    "dev": "strapi develop",
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "strapi": "strapi"
+  },
+  "dependencies": {
+    "@strapi/plugin-i18n": "4.19.0",
+    "@strapi/plugin-users-permissions": "4.19.0",
+    "@strapi/strapi": "4.19.0",
+    "mysql": "^2.18.1",
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "5.3.4",
+    "styled-components": "5.3.3"
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "e6ac179b-3fda-4b85-95d2-d0b6a1c28e38"
+  }
 }
