--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
           push: true
           tags: |
             dtrechas/personal-site-strapi:latest
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
