--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,5 +1,5 @@
-FROM node:20-alpine3.18
-
+FROM node:22-alpine
+# Installing libvips-dev for sharp Compatibility
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev nasm bash vips-dev git
 ARG NODE_ENV=development
 ENV NODE_ENV=${NODE_ENV}
