--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,25 +10,37 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4 # Updated to v4 for latest
+        uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3 # Updated to v3 for latest
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5 # Updated to v5 for latest
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
           platforms: linux/arm64
-          tags: dtrechas/personal-site-strapi:latest
-          # Enable build caching for faster consecutive builds
-          cache-from: type=registry,ref=dtrechas/personal-site-strapi:buildcache
-          cache-to: type=registry,ref=dtrechas/personal-site-strapi:buildcache,mode=max
+          tags: |
+            dtrechas/personal-site-strapi:latest
+            ghcr.io/${{ github.repository_owner }}/personal-site-strapi:latest
+          cache-from: |
+            type=registry,ref=dtrechas/personal-site-strapi:buildcache
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache
+          cache-to: |
+            type=registry,ref=dtrechas/personal-site-strapi:buildcache,mode=max
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache,mode=max
