--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,3 +44,7 @@ jobs:
           cache-to: |
             type=registry,ref=dtrechas/personal-site-strapi:buildcache,mode=max
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache,mode=max
+
+      - name: Trigger Dokploy Deployment
+        run: |
+          curl -X POST ${{ secrets.DOKPLOY_WEBHOOK_URL }}
