--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,14 +36,13 @@ services:
     container_name: personal-site-strapiDB
     restart: unless-stopped
     env_file: .env
-    image: postgres:16.0-alpine
+    image: postgres:17-alpine
     environment:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: ${DATABASE_NAME}
     volumes:
-      - personal-site-strapi-data:/var/lib/postgresql/data/ #using a volume
-      #- ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
+      - personal-site-strapi-data:/var/lib/postgresql/data/
 
     ports:
       - "5432:5432"
