--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -35,15 +29,9 @@ jobs:
           file: ./Dockerfile
           push: true
           platforms: linux/arm64
-          tags: |
-            dtrechas/personal-site-strapi:latest
-            ghcr.io/${{ github.repository_owner }}/personal-site-strapi:latest
-          cache-from: |
-            type=registry,ref=dtrechas/personal-site-strapi:buildcache
-            type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache
-          cache-to: |
-            type=registry,ref=dtrechas/personal-site-strapi:buildcache,mode=max
-            type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache,mode=max
+          tags: ghcr.io/${{ github.repository_owner }}/personal-site-strapi:latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache,mode=max
 
       - name: Trigger Dokploy Deployment
         run: |
