--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -12,7 +12,8 @@ ENV PATH=/opt/node_modules/.bin:$PATH
 
 WORKDIR /opt/app
 COPY . .
-RUN chown -R node:node /opt/app
+
+RUN chown -R node:node /opt/app /opt/node_modules
 USER node
 RUN ["yarn", "build"]
 EXPOSE 1337
