--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:docker": "docker compose up --remove-orphans --build --force-recreate -d",
     "dev": "strapi develop",
     "develop": "strapi develop",
+    "seed": "ts-node src/seed.ts",
     "start": "strapi start",
     "strapi": "strapi"
   },
@@ -24,6 +25,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
     "styled-components": "^6.1.19"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
