--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,15 +26,15 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
           platforms: linux/arm64
           tags: ghcr.io/${{ github.repository_owner }}/personal-site-strapi:latest
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/personal-site-strapi:buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Trigger Dokploy Deployment
         run: |
