--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,20 +1,26 @@
 FROM node:22-alpine
 
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev nasm bash vips-dev git
-ARG NODE_ENV=development
-ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /opt/
 COPY package.json yarn.lock ./
-RUN yarn global add node-gyp
-RUN yarn config set network-timeout 600000 -g && yarn install
+RUN yarn global add node-gyp && \
+    yarn config set network-timeout 600000 -g && \
+    yarn install
 ENV PATH=/opt/node_modules/.bin:$PATH
 
 WORKDIR /opt/app
-COPY . .
+COPY tsconfig.json package.json ./
+COPY config ./config
+COPY src ./src
+COPY public ./public
 
 RUN chown -R node:node /opt/app /opt/node_modules
 USER node
+
+ARG NODE_ENV=development
+ENV NODE_ENV=${NODE_ENV}
+
 RUN ["yarn", "build"]
 EXPOSE 1337
 CMD ["yarn", "develop"]
