feat: Introduce Biome and lefthook

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site-strapi",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "private": true,
   "description": "Strapi backend for my personal site",
   "license": "MIT",
@@ -15,7 +15,14 @@
     "develop": "strapi develop",
     "seed": "ts-node src/seed.ts",
     "start": "strapi start",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "biome:format": "biome format --write .",
+    "biome:format:check": "biome format .",
+    "biome:lint": "biome lint --write .",
+    "biome:lint:check": "biome lint .",
+    "biome:check": "biome check --write .",
+    "biome:ci": "biome ci .",
+    "postinstall": "git rev-parse --git-dir > /dev/null 2>&1 && lefthook install || true"
   },
   "dependencies": {
     "@strapi/plugin-users-permissions": "5.33.1",
@@ -28,6 +35,8 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.10",
+    "lefthook": "^2.0.13",
     "ts-node": "^10.9.2"
   },
   "engines": {
