--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,28 @@
-name: Build Docker image
+name: Deploy
 
 on:
   push:
     branches: ["main"]
 
 jobs:
-  build-and-push-dockerfile-image:
+  ci:
+    runs-on: ubuntu-24.04-arm
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+        with:
+          persist-credentials: false
+      - name: Setup Biome
+        uses: biomejs/setup-biome@v2
+        with:
+          version: latest
+      - name: Run Biome
+        run: biome ci .
+
+  build-and-deploy-dockerfile-image:
+    needs: ci
     runs-on: ubuntu-24.04-arm
     permissions:
       contents: read
