--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,14 @@ on:
   push:
     branches: ["main"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   ci:
     runs-on: ubuntu-24.04-arm
+    timeout-minutes: 5
     permissions:
       contents: read
     steps:
@@ -21,16 +26,17 @@ jobs:
       - name: Run Biome
         run: biome ci .
 
-  build-and-deploy-dockerfile-image:
+  build-and-deploy:
     needs: ci
     runs-on: ubuntu-24.04-arm
+    timeout-minutes: 15
     permissions:
       contents: read
       packages: write
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -49,10 +55,11 @@ jobs:
           file: ./Dockerfile
           push: true
           platforms: linux/arm64
-          tags: ghcr.io/${{ github.repository_owner }}/personal-site-strapi:latest
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/personal-site-strapi:latest
+            ghcr.io/${{ github.repository_owner }}/personal-site-strapi:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Trigger Dokploy Deployment
-        run: |
-          curl -X POST ${{ secrets.DOKPLOY_WEBHOOK_URL }}
+        run: curl -fsS -X POST "${{ secrets.DOKPLOY_WEBHOOK_URL }}"
