--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "seed": "ts-node src/seed.ts",
     "start": "strapi start",
     "strapi": "strapi",
+    "biome:check": "biome check .",
+    "biome:check:fix": "biome check --write .",
     "biome:format": "biome format --write .",
-    "biome:format:check": "biome format .",
+    "biome:format:fix": "biome format .",
     "biome:lint": "biome lint --write .",
-    "biome:lint:check": "biome lint .",
-    "biome:check": "biome check --write .",
+    "biome:lint:fix": "biome lint .",
     "biome:ci": "biome ci .",
     "postinstall": "git rev-parse --git-dir > /dev/null 2>&1 && lefthook install || true"
   },
