--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,25 @@
+commit-msg:
+  commands:
+    conventional-commit:
+      run: |
+        commit_msg=$(cat {1})
+        pattern="^(feat|fix|docs|style|refactor|test|ci|chore|revert|agents)(\(.+\))?: .{1,}"
+        if ! echo "$commit_msg" | grep -qE "$pattern"; then
+          if ! echo "$commit_msg" | grep -qE "^Merge "; then
+            echo "❌ Commit message must follow Conventional Commits format:"
+            echo "   type(scope)?: description"
+            echo ""
+            echo "   Types: feat, fix, docs, style, refactor, test, ci, chore, revert, agents"
+            echo "   Example: feat: add new feature"
+            echo "   Example: fix(api): resolve bug"
+            exit 1
+          fi
+        fi
+
 pre-commit:
   parallel: true
   commands:
     biome-check:
-      glob: "*.{ts,js}"
-      run: yarn biome:check {staged_files}
+      glob: "*.{ts,js,mjs,json}"
+      run: npx @biomejs/biome check --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
       stage_fixed: true
